@@ -104,8 +104,9 @@ HSTOOLFLAGS	= $(filter -H%,$(HC_FLAGS)) -M350m
 
 BUILT_IN_C2HS	= @BUILT_IN_C2HS@
 
-.PHONY: default all install installdirs installcheck \
-	uninstall clean distclean maintainerclan mostlyclean \
+.PHONY: default all install installdirs installfiles installpackage \
+	installcheck uninstall uninstallfiles uninstallpackage \
+	clean distclean maintainerclan mostlyclean \
 	inplace noinplace inplaceinit dist tarsource debug
 
 default		: all
